[package]
name = "bristlefrost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24.0"
strum_macros = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.61", features = ["preserve_order"] }
serde_repr = "0.1.7"
num_enum = "0.5.6"
